--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+/src/config
 /.pnp
 .pnp.js
 
@@ -21,5 +22,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-keys.js
-./config/keys.js
+
